--- a/config/database.yml
+++ b/config/database.yml
@@ -1,9 +1,18 @@
-default: &default
-  adapter: postgresql
-  encoding: unicode
+# default: &default
+#   adapter: postgresql
+#   encoding: unicode
+#   pool: 5
+#   username: atom
+#   password: ecoolapi
+
+development: &default
+  adapter: mysql2
+  encoding: utf8
+  reconnect: true
   pool: 5
-  username: atom
-  password: ecoolapi
+  username: root
+  password: 1234
+  host: 127.0.0.1
 
 development:
   <<: *default
